Added loader, qol changes, completed gauth

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -25,3 +25,28 @@
 .graph {
     padding-bottom: 25px;
 }
+
+.menu .item {
+    float: right;
+}
+
+.gauth {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.hidden {
+    display: none;
+}
+
+.loader {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+}
+
+.loader .segment {
+    height: 800px;
+}
